feat: support lesson report attachments
